# TMS-neuronav

./: .gitignore  README.md  bfm-test.py  face-pointcloud.py  facial-landmarks.ipynb  facial-landmarks.py  hog-face.ipynb  nose-tracking.py  pcl-test.py  pointcloud.py  pointcloud1.py
3Dmm/: CMakeLists.txt  fit-model.cpp  main.cpp  testing2d.cpp
RealSense/: CMakeLists.txt  example.hpp  playback.cpp  playback1.cpp  rs-record-playback.cpp  rs-record-playback.h
RealSense/GLFW/: glfw3.h
RealSense/imgui1/: imgui_impl_glfw.cpp  imgui_impl_glfw.h  main.cpp  main.h
